# forge

./: Cargo.toml  forge.yaml
.github/workflows/: ci.yml
crates/forge_api/: Cargo.toml
crates/forge_api/src/: api.rs  executor.rs  forge_api.rs  lib.rs  loader.rs
crates/forge_app/: Cargo.toml
crates/forge_app/src/: app.rs  attachment.rs  env.rs  ide.rs  lib.rs  tool_service.rs
crates/forge_app/src/service/: api.rs  chat.rs  env.rs  provider.rs  system_prompt.rs  user_prompt.rs
crates/forge_app/src/tools/: fetch.rs  mod.rs  think.rs
crates/forge_ci/: Cargo.toml
crates/forge_ci/tests/: ci.rs
crates/forge_code/: Cargo.toml
crates/forge_code/src/: code.rs  db.rs  instances.rs  lib.rs  parse.rs  process.rs
crates/forge_code/src/fixtures/: extract_active_files-2.json  extract_active_files-5.json  extract_focused_file-2.json  extract_focused_file-4.json
crates/forge_domain/: Cargo.toml
crates/forge_domain/examples/: executor_test.rs
crates/forge_domain/src/: api.rs  chat_request.rs  conversation.rs  env.rs  environment.rs  error.rs  executable.rs  ide.rs  lib.rs  mcp.rs  message.rs  orch.rs  provider.rs  services.rs  tool.rs  tool_call.rs  tool_call_service.rs  tool_definition.rs  tool_name.rs  tool_result.rs  workflow.rs
crates/forge_env/src/: env.rs
crates/forge_fs/: Cargo.toml
crates/forge_fs/src/: lib.rs
crates/forge_infra/: Cargo.toml
crates/forge_infra/src/: create_dirs.rs  file_exists.rs  file_meta.rs  file_read.rs  file_remove.rs  file_snap.rs  file_write.rs  infra.rs  lib.rs
crates/forge_inte/tests/: api_spec.rs
crates/forge_main/: Cargo.toml
crates/forge_main/src/: cli.rs  lib.rs  main.rs  state.rs  terminal.rs  ui.rs
crates/forge_main/src/completer/: input_completer.rs
crates/forge_mcp/: Cargo.toml
crates/forge_mcp/examples/: simple_client.rs
crates/forge_mcp/src/: client.rs  context.rs  error.rs  lib.rs  provider.rs  resources.rs  switching.rs  tools.rs  workflow.rs
crates/forge_mcp/src/transport/: http.rs  mod.rs  stdio.rs
crates/forge_mcp/tests/: client_tests.rs  error_tests.rs  resource_tests.rs  tool_adapter_tests.rs  transport_tests.rs
crates/forge_ollama/: Cargo.toml
crates/forge_ollama/src/: lib.rs  ollama.rs
crates/forge_open_router/src/: builder.rs  open_router.rs  request.rs
crates/forge_open_router/src/open_router/: api.rs
crates/forge_provider/src/: model.rs
crates/forge_server/: Cargo.toml
crates/forge_server/src/: api.rs  app.rs  completion.rs  executor.rs  lib.rs
crates/forge_server/tests/: test_patches.rs
crates/forge_server_tests/: Cargo.toml
crates/forge_server_tests/fixtures/rust_tests1/: non_idiomatic.rs
crates/forge_server_tests/src/: lib.rs
crates/forge_server_tests/tests/: test_patches.rs
crates/forge_services/: Cargo.toml
crates/forge_services/src/: forge_services.rs  lib.rs  loader.rs  mcp.rs  tool_service.rs
crates/forge_snaps/: Cargo.toml
crates/forge_snaps/src/: lib.rs  service.rs
crates/forge_snapshot/: Cargo.toml
crates/forge_snapshot/src/: lib.rs  service.rs
crates/forge_tool/: Cargo.toml
crates/forge_tool/src/: approve.rs  ask.rs  fetch.rs  lib.rs  outline.rs  select.rs  shell.rs  test_utils.rs  think.rs  tool_engine.rs  tool_service.rs
(+48 files in other folders)
