[package]
name = "forge_mcp"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
derive_builder = { workspace = true }
derive_more = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }

# Internal crates
forge_domain = { path = "../forge_domain" }
forge_stream = { path = "../forge_stream" }
reqwest = { version = "0.12.15",  features = ["json"]}
tokio-stream = "0.1.17"