[package]
name = "forge_mcp"
version = "0.1.0"
edition = "2024"

[dependencies]
rmcp.workspace = true
anyhow.workspace = true
serde_json.workspace = true
tokio.workspace = true
futures.workspace = true
tracing.workspace = true
forge_domain.workspace = true
forge_services.workspace = true
forge_api.workspace = true
