[package]
name = "forge_ollama"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
thiserror = "2.0.11"
async-trait = "0.1.86"
forge_domain = { path = "../forge_domain" }
anyhow = "1.0.95"
tokio = { version = "1.36.0", features = ["full"] }
tokio-util = { version = "0.7.10", features = ["io"] }
bytes = "1.5.0"
futures = "0.3.30"
tracing = "0.1.40"
async-stream = "0.3.5"
reqwest-eventsource = "0.6.0"
tokio-stream = "0.1.14"
