[package]
name = "forge_ollama"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
thiserror = "2.0.11"
async-trait = "0.1.86"
forge_domain = { path = "../forge_domain" }
anyhow = "1.0.95"
futures = "0.3.30"
reqwest-eventsource = "0.6.0"
tokio-stream = "0.1.14"
