[package]
name = "forge_snaps"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
forge_fs = { path = "../forge_fs" }
forge_walker = { path = "../forge_walker" }
blake3.workspace = true

[dev-dependencies]
tempfile = "3.17.1"
tokio = {version = "1.43.0", features = ["full"]}
